# tpchgen-rs

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: CI.yml  conformance.yml  package-pypi.yml  tpchgen-cli-publish-pypi.yml  tpchgen-cli-pypi.yml
benchmarks/: .gitignore  BENCHMARKING.md  duckdb_duckdb.sh  duckdb_duckdb.txt  parquet_duckdb.sh  parquet_duckdb.txt  parquet_tpchgen.sh  parquet_tpchgen.txt  tbl_dbgen.sh  tbl_dbgen_O3.sh  tbl_dbgen_O3.txt  tbl_dbgen_docker.sh  tbl_dbgen_docker.txt  tbl_tpchgen.sh  tbl_tpchgen.txt  tbl_tpchgen_1.sh  tbl_tpchgen_1.txt
data/csv/: README.md
tests/: conformance.sh
tpchgen-arrow/: Cargo.toml
tpchgen-arrow/src/: conversions.rs  lineitem.rs  order.rs
tpchgen-arrow/tests/: reparse.rs
tpchgen-cli/: Cargo.toml  pyproject.toml
tpchgen-cli/python/tpchgen/: __init__.py  main.py
tpchgen-cli/python/tpchgen_cli/: main.py
tpchgen-cli/src/: generate.rs  lib.rs  main.rs  parquet.rs  statistics.rs
tpchgen/src/: dates.rs  distribution.rs  generators.rs  lib.rs  queries.rs  random.rs  text.rs  textgen.rs  utils.rs
tpchgen/tests/: integration_tests.rs
