[package]
name = "tpchgen-cli"
authors = { workspace = true }
description = "Blazing fast pure Rust no dependency TPC-H data generator."
readme = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = "0.1.1"

[lib]
name = "tpchgen"
path = "src/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[[bin]]
name = "tpchgen"
path = "src/main.rs"

[dependencies]
arrow = "54.3.0"
parquet = "54.3.0"
clap = { version = "4.5.32", features = ["derive"] }
tpchgen = { path = "../tpchgen", version = "0.1.0"}
tpchgen-arrow = { path = "../tpchgen-arrow", version = "0.1.1" }
tokio = { version = "1.44.1", features = ["full"]}
futures = "0.3.31"
num_cpus = "1.0"
log = "0.4.26"
env_logger = "0.11.7"

[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
